--- a/docs/u-cy375.md
+++ b/docs/u-cy375.md
@@ -1,14 +1,14 @@
 # u-cy375 - HIST2 Ensemble Member 11
 
 **Runner:**  Laura Baker  
-**Run Start Date:**  
+**Run Start Date:** 9/8/23 
 **Run Completion Date:**
 
 ### Events/Notes
 
 | Cycle | Task | Comment / Issue | Action | Date |
 | ---   | ---  | ---             | ---    | ---  |
-| e.g. 19500101   | e.g. coupled  |      |  e.g. Suite Paused   |    |
+| 19500101   |   | Missing parent_source_id CMIP6.CMIP.MOHC.HadGEM3-GC31-MM.historical.r3i1p1f3 in this cycle    |     |    |
 
 
 ### JDMA Batch Numbers
